meshes don't quite work yet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,6 +109,7 @@
         "xtr1common": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "*.glsl": "cpp"
+        "*.glsl": "cpp",
+        "resumable": "cpp"
     }
 }
