Static meshes are working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -111,6 +111,7 @@
         "xutility": "cpp",
         "*.glsl": "cpp",
         "resumable": "cpp",
-        "codecvt": "cpp"
+        "codecvt": "cpp",
+        "*.vs": "cpp"
     }
 }
